name:                saq
version:             0.1.0.0
synopsis:            I hate everything
description:         Please see README.md
homepage:            http://github.com/harem-audio/saq#readme
license:             PublicDomain
license-file:        LICENSE
author:              bsmt
maintainer:          bsmt@bsmt.me
copyright:           Dick Cheney
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable saq-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, text, configurator, shake, shake-language-c
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/saq
